tests-integration/fixtures/checking/1772011800_role_declaration_loosen_error/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
F ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    F @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))

Types
F :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type

Roles
F = [Representational, Nominal]

Diagnostics
error[InvalidRoleDeclaration]: Invalid role declaration: declared Phantom, inferred Nominal
  --> 3:1..3:21
  |
3 | data F f a = F (f a)
  | ^~~~~~~~~~~~~~~~~~~~
